fixed colors and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 h1,
 h2,
 h5 {
-  color: var(--primary-color);
+  color: var(--highlight-color-light);
   font-family: var(--secondary-font);
 }
 
@@ -24,6 +24,7 @@ h2 {
   margin-top: 1rem;
   margin-bottom: 1rem;
   text-align: center;
+  text-transform: uppercase;
 }
 
 p {
@@ -46,6 +47,11 @@ body {
 
 #tips .card {
   margin-bottom: 2rem;
+}
+
+#tips h5{
+  color: var(--primary-color);
+  margin-bottom: 1rem;
 }
 
 .card-body {
